[package]
name = "rs-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "^1.18", features = ["rt-multi-thread", "sync", "macros"]}
anyhow = "1.0.*"
once_cell = "1.13.*"
log = "0.4.*"
notify = "5.0.0-pre.13"
rocket = {version = "0.5.0-rc", optional = true}
ory-kratos-client = {version = "0.10.1", optional = true}
serde = {version = "1.0.*", optional = true}

[dev-dependencies]
figment = {version = "0.10.*", features = ["yaml"]}
serde = {version = "1", features = ["derive"]}
httpmock = "0.6"

[features]
kratos = ["dep:ory-kratos-client", "dep:rocket", "dep:serde"]
anyhow-rocket = ["dep:rocket"]
