[package]
name = "rs-utils"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "^1.32", features = ["rt-multi-thread", "sync", "macros"]}
anyhow = "^1.0"
thiserror = "^1.0"
log = "^0.4"
notify = "^6.0.0"
rocket = {version = "0.5.0-rc", optional = true}
ory-kratos-client = {version = ">=1.0", optional = true}
serde = {version = "^1.0", optional = true}
rust-s3 = {version = "0.33", features = ["with-tokio"], optional = true}
redis = {version = "^0.24", features = ["tokio-comp", "connection-manager"], optional = true}
time = {version = "^0.3", optional = true}
async-trait = "^0.1"

[dev-dependencies]
figment = {version = "^0.10", features = ["yaml"]}
serde = {version = "^1", features = ["derive"]}
httpmock = "^0.7"
rand = "^0.8"

[features]
default = ["kratos", "anyhow-rocket", "minio", "redis"]
kratos = ["dep:ory-kratos-client", "dep:serde"]
anyhow-rocket = ["dep:rocket"]
minio = ["dep:rust-s3", "dep:serde", "dep:time"]
redis = ["dep:serde", "dep:redis"]
